--- a/app/views/pages/form_company.html.erb
+++ b/app/views/pages/form_company.html.erb
@@ -1,91 +1,18 @@
 <% if current_user.nil?%>
 
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>dealhunter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Le styles -->
-
-    <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css"/>
-    <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css"/>
-    <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-
-    <script src="../assets/bootstrap-dropdown.js"></script>
-
-
-    <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery-ui.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/lib/namespace.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.checkbox-toggler.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.dropdown-menu.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.popover.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.table-checkbox-toggler.js?body=1"
-            type="text/javascript"></script>
-    <script src="/assets/active_admin/pages/application.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/pages/batch_actions.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/application.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/base.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery_nested_form.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.tagsinput.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.tokeninput.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin.js?body=1" type="text/javascript"></script>
-    <script src="/assets/batches.js?body=1" type="text/javascript"></script>
-    <script src="/assets/billings.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-alert.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-collapse.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-dropdown.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-filestyle-0.1.0.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-modal.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-tab.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-transition.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.ba-throttle-debounce.min.js?body=1"
-            type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.mousewheel.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.touchSwipe.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.transit.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/jquery-1.8.2.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/jquery.carouFredSel-6.2.0-packed.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/jquery.carouFredSel-6.2.0.js?body=1" type="text/javascript"></script>
-    <script src="/assets/credits.js?body=1" type="text/javascript"></script>
-    <script src="/assets/faqs.js?body=1" type="text/javascript"></script>
-    <script src="/assets/html5shiv.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jcalendar.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.tipsy.js?body=1" type="text/javascript"></script>
-    <script src="/assets/pages.js?body=1" type="text/javascript"></script>
-    <script src="/assets/slider/jquery-1.9.0.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/slider/jquery.nivo.slider.js?body=1" type="text/javascript"></script>
-    <script src="/assets/slider/jquery.nivo.slider.pack.js?body=1" type="text/javascript"></script>
-    <script src="/assets/application.js?body=1" type="text/javascript"></script>
-
-    <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
-    -->
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="/assets/html5shiv.js"></script>
-    <![endif]-->
-
-</head>
-
 
 <body id="page-micuenta">
 
 <!--header-->
 <header id="top" class="light-shadowed">
-    <div class="container">
-        <div class="row">
-            <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
+  <div class="container">
+    <div class="row">
+      <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
 
-        </div>
-        <!--end row-->
     </div>
-    <!--end container header-->
+    <!--end row-->
+  </div>
+  <!--end container header-->
 </header>
 <!--end header-->
 
@@ -95,7 +22,7 @@
     <div class="rounded-borders ">
         <section class="span12 rounded-borders light-shadowed">
             <header class="out rounded-borders-top">
-            <h2>Queres publicar con nosotros?</h2>
+            <h2>¿Querés publicar con nosotros?</h2>
             </header>
 
             <div class="wrapper-padding">
@@ -103,6 +30,13 @@
                 <div class="wrapper">
                     <article class="row-fluid">
                         <div class="span8">
+                          <% unless flash[:notice].nil? %>
+                              <div class="alert">
+
+                                <%= flash[:notice] %>
+
+                              </div>
+                          <% end %>
                             <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |form| %>
                             <fieldset>
 
@@ -143,7 +77,7 @@
                                 <%= form.text_area :body, :rows =>3, :style =>"width:97.8%;" %>
                                 <hr>
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-dealhunter">Enviar</button>
+                                    <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Enviar</button>
                                 </div>
                             </fieldset>
                             <% end %>
@@ -238,95 +172,29 @@
 <% else %>
 
 
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>dealhunter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Le styles -->
-
-    <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css"/>
-    <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css"/>
-    <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-
-    <script src="../assets/bootstrap-dropdown.js"></script>
-
-
-    <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery-ui.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/lib/namespace.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.checkbox-toggler.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.dropdown-menu.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.popover.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/components/jquery.aa.table-checkbox-toggler.js?body=1"
-            type="text/javascript"></script>
-    <script src="/assets/active_admin/pages/application.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/pages/batch_actions.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/application.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin/base.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery_nested_form.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.tagsinput.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.tokeninput.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap.js?body=1" type="text/javascript"></script>
-    <script src="/assets/active_admin.js?body=1" type="text/javascript"></script>
-    <script src="/assets/batches.js?body=1" type="text/javascript"></script>
-    <script src="/assets/billings.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-alert.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-collapse.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-dropdown.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-filestyle-0.1.0.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-modal.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-tab.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap-transition.js?body=1" type="text/javascript"></script>
-    <script src="/assets/bootstrap.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.ba-throttle-debounce.min.js?body=1"
-            type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.mousewheel.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.touchSwipe.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/helper-plugins/jquery.transit.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/jquery-1.8.2.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/jquery.carouFredSel-6.2.0-packed.js?body=1" type="text/javascript"></script>
-    <script src="/assets/carousel/jquery.carouFredSel-6.2.0.js?body=1" type="text/javascript"></script>
-    <script src="/assets/credits.js?body=1" type="text/javascript"></script>
-    <script src="/assets/faqs.js?body=1" type="text/javascript"></script>
-    <script src="/assets/html5shiv.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jcalendar.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.tipsy.js?body=1" type="text/javascript"></script>
-    <script src="/assets/pages.js?body=1" type="text/javascript"></script>
-    <script src="/assets/slider/jquery-1.9.0.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/slider/jquery.nivo.slider.js?body=1" type="text/javascript"></script>
-    <script src="/assets/slider/jquery.nivo.slider.pack.js?body=1" type="text/javascript"></script>
-    <script src="/assets/application.js?body=1" type="text/javascript"></script>
-
-    <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
-    -->
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="/assets/html5shiv.js"></script>
-    <![endif]-->
-
-</head>
-
 
 <body id="page-micuenta">
 
 
-<div class="container" id="main-content">
-    <div class="row">
-        <section class="span12">
-            <header class="out">
-                <h2>Queres publicar con nosotros?</h2>
+<div class="container" id="main-content" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+     xmlns="http://www.w3.org/1999/html">
+  <div class="rounded-borders ">
+    <section class="span12 rounded-borders light-shadowed">
+      <header class="out rounded-borders-top">
+              <h2>¿Querés publicar con nosotros?</h2>
             </header>
 
             <div class="wrapper-padding">
-
                 <div class="wrapper">
                     <article class="row-fluid">
                         <div class="span8">
+                          <% unless flash[:notice].nil? %>
+                              <div class="alert">
+
+                                <%= flash[:notice] %>
+
+                              </div>
+                          <% end %>
                           <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |form| %>
                             <fieldset>
 
@@ -366,7 +234,7 @@
                                 <%= form.text_area :body, :rows =>3, :style =>"width:97.8%;" %>
                                 <hr>
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-dealhunter">Enviar</button>
+                                    <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Enviar</button>
                                 </div>
                             </fieldset>
                             <% end %>
