--- a/app/views/pages/we.html.erb
+++ b/app/views/pages/we.html.erb
@@ -98,12 +98,11 @@
 
 <% else %>
 
-
     <div class="container" id="main-content" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
          xmlns="http://www.w3.org/1999/html">
-      <div class="row">
-        <section class="span12">
-          <header class="out">
+      <div class="rounded-borders ">
+        <section class="span12 rounded-borders light-shadowed">
+          <header class="out rounded-borders-top">
             <h2>Acerca de Dealhunter</h2>
           </header>
 
@@ -138,3 +137,5 @@
     </div><!--end row-->
 
 <% end %>
+
+
