--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,75 +1,4 @@
-    <html>
-    <head>
-      <meta charset="UTF-8">
-      <title>dealhunter</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- Le styles -->
-
-      <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-
-      <script src="../assets/bootstrap-dropdown.js"></script>
-
-
-      <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jquery-ui.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/lib/namespace.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/components/jquery.aa.checkbox-toggler.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/components/jquery.aa.dropdown-menu.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/components/jquery.aa.popover.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/components/jquery.aa.table-checkbox-toggler.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/pages/application.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/pages/batch_actions.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/application.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin/base.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jquery_nested_form.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jquery.tagsinput.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jquery.tokeninput.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap.js?body=1" type="text/javascript"></script>
-      <script src="/assets/active_admin.js?body=1" type="text/javascript"></script>
-      <script src="/assets/batches.js?body=1" type="text/javascript"></script>
-      <script src="/assets/billings.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-alert.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-collapse.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-dropdown.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-filestyle-0.1.0.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-modal.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-tab.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap-transition.js?body=1" type="text/javascript"></script>
-      <script src="/assets/bootstrap.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/helper-plugins/jquery.ba-throttle-debounce.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/helper-plugins/jquery.mousewheel.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/helper-plugins/jquery.touchSwipe.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/helper-plugins/jquery.transit.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/jquery-1.8.2.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/jquery.carouFredSel-6.2.0-packed.js?body=1" type="text/javascript"></script>
-      <script src="/assets/carousel/jquery.carouFredSel-6.2.0.js?body=1" type="text/javascript"></script>
-      <script src="/assets/credits.js?body=1" type="text/javascript"></script>
-      <script src="/assets/faqs.js?body=1" type="text/javascript"></script>
-      <script src="/assets/html5shiv.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jcalendar.js?body=1" type="text/javascript"></script>
-      <script src="/assets/jquery.tipsy.js?body=1" type="text/javascript"></script>
-      <script src="/assets/pages.js?body=1" type="text/javascript"></script>
-      <script src="/assets/slider/jquery-1.9.0.min.js?body=1" type="text/javascript"></script>
-      <script src="/assets/slider/jquery.nivo.slider.js?body=1" type="text/javascript"></script>
-      <script src="/assets/slider/jquery.nivo.slider.pack.js?body=1" type="text/javascript"></script>
-      <script src="/assets/application.js?body=1" type="text/javascript"></script>
-
-      <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
-      -->
-      <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-      <!--[if lt IE 9]>
-      <script src="/assets/html5shiv.js"></script>
-      <![endif]-->
-
-    </head>
-
-    <% if current_user.nil?%>
+<% if current_user.nil? %>
 
     <body id="page-micuenta">
 
@@ -79,15 +8,17 @@
         <div class="row">
           <div class="span3" id="logo-header"><a href="/offers"><img src="/assets/logo-header.png"></a></div>
 
-        </div><!--end row-->
-      </div><!--end container header-->
-    </header><!--end header-->
-
+        </div>
+        <!--end row-->
+      </div>
+      <!--end container header-->
+    </header>
+    <!--end header-->
 
 
     <div class="container" id="main-content">
-      <div class="row rounded-borders light-shadowed">
-        <section class="span12">
+      <div class="rounded-borders ">
+        <section class="span12 rounded-borders light-shadowed">
           <header class="out rounded-borders-top">
             <h2>Contactanos</h2>
           </header>
@@ -97,34 +28,42 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <%= form_for(Message.new(), :url => { :action => "contact", :controller => :pages }, :html => { :method => :post }) do |f| %>
+                  <% unless flash[:notice].nil? %>
+                      <div class="alert">
+
+                        <%= flash[:notice] %>
+
+                      </div>
+                  <% end %>
+                  <%= form_for(Message.new(), :url => {:action => "contact", :controller => :pages}, :html => {:method => :post}) do |f| %>
                       <fieldset>
                         <p>Por favor, ponete en contacto con nosotros mediante el formulario.</p>
                         <hr>
                         <div class="row-fluid">
                           <div class="span6">
                             <label>Nombre</label>
-                            <%=f.text_field :name, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
+                            <%= f.text_field :name, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
 
                             <label>Email</label>
-                            <%=f.text_field :email, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
+                            <%= f.text_field :email, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
                           </div>
                           <div class="span6" style="margin-top: 66.5px">
                             <label>Asunto</label>
-                            <%=f.text_field :subject, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
+                            <%= f.text_field :subject, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
                           </div>
                         </div>
 
                         <label>Comentarios</label>
-                        <%=f.text_area :body, :label => false, :rows => "3", :style => "width:97%;" %>
+                        <%= f.text_area :body, :label => false, :rows => "3", :style => "width:97%;" %>
 
                         <hr>
                         <div class="text-center">
-                          <button type="submit" class="btn btn-dealhunter">Enviar</button>
+                          <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Enviar</button>
                         </div>
                       </fieldset>
                   <% end %>
-                </div> <!--end span8-->
+                </div>
+                <!--end span8-->
                 <div class="span3 offset1">
                   <address>
                     <strong>Dirección</strong><br>
@@ -140,23 +79,32 @@
 
                   <address>
                     <strong>Teléfono</strong><br>
+
                     <p>0800-111-DEAL(3315)</p>
                   </address>
 
                   <address>
                     <strong>Twitter</strong><br>
-                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="https://twitter.com/dealhunterArg" target="_blank">@dealhunterArg</a></p>
+
+                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter
+                      <a href="https://twitter.com/dealhunterArg" target="_blank">@dealhunterArg</a></p>
                   </address>
 
-                </div><!--end span4-->
+                </div>
+                <!--end span4-->
 
               </article>
 
-            </div><!--end wrapper-->
-          </div><!--end wrapper-padding-->
-        </section><!--end main content-->
-      </div><!--end container-->
-    </div><!--end row-->
+            </div>
+            <!--end wrapper-->
+          </div>
+          <!--end wrapper-padding-->
+        </section>
+        <!--end main content-->
+      </div>
+      <!--end container-->
+    </div>
+    <!--end row-->
 
     <footer id="footer-wrapper" class="dh-footer">
       <div class="container">
@@ -188,7 +136,8 @@
           <div class="span2">
             <ul class="inline pull-right social">
               <li><a href="#" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a>
+              </li>
               <li><a href="#" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
@@ -197,17 +146,16 @@
 
       </div>
     </footer>
+    </body>
 
 
 <% else %>
 
 
-    <body id="page-micuenta">
-
     <div class="container" id="main-content">
-      <div class="row">
-        <section class="span12">
-          <header class="out">
+      <div class="rounded-borders ">
+        <section class="span12 rounded-borders light-shadowed">
+          <header class="out rounded-borders-top">
             <h2>Contactanos</h2>
           </header>
 
@@ -216,27 +164,37 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <%= form_for(Message.new(), :url => { :action => "contact", :controller => :pages }, :html => { :method => :post }) do |f| %>
+
+                  <% unless flash[:notice].nil? %>
+                      <div class="alert">
+
+                        <%= flash[:notice] %>
+
+                      </div>
+                  <% end %>
+
+                  <%= form_for(Message.new(), :url => {:action => "contact", :controller => :pages}, :html => {:method => :post}) do |f| %>
                       <fieldset>
                         <p>Por favor, ponete en contacto con nosotros mediante el formulario.</p>
                         <hr>
                         <div class="row-fluid">
                           <div class="span6">
                             <label>Asunto</label>
-                            <%=f.text_field :subject, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
+                            <%= f.text_field :subject, :label => false, :class => "input-xlarge", :style => "margin-right:10px;" %>
                           </div>
                         </div>
 
                         <label>Comentarios</label>
-                        <%=f.text_area :body, :label => false, :rows => "3", :style => "width:97%;" %>
+                        <%= f.text_area :body, :label => false, :rows => "3", :style => "width:97%;" %>
 
                         <hr>
                         <div class="text-center">
-                          <button type="submit" class="btn btn-dealhunter">Enviar</button>
+                          <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Enviar</button>
                         </div>
                       </fieldset>
                   <% end %>
-                </div> <!--end span8-->
+                </div>
+                <!--end span8-->
                 <div class="span3 offset1">
                   <address>
                     <strong>Dirección</strong><br>
@@ -252,25 +210,34 @@
 
                   <address>
                     <strong>Teléfono</strong><br>
+
                     <p>0800-111-DEAL(3315)</p>
                   </address>
 
                   <address>
                     <strong>Twitter</strong><br>
-                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/dealhunterarg">@dealhunterArg</a></p>
+
+                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter
+                      <a href="http://www.twitter.com/dealhunterarg">@dealhunterArg</a></p>
                   </address>
 
-                </div><!--end span4-->
+                </div>
+                <!--end span4-->
 
               </article>
 
-            </div><!--end wrapper-->
-          </div><!--end wrapper-padding-->
-        </section><!--end main content-->
-      </div><!--end container-->
+            </div>
+            <!--end wrapper-->
+          </div>
+          <!--end wrapper-padding-->
+        </section>
+        <!--end main content-->
+      </div>
+      <!--end container-->
     </div><!--end row-->
 
 <% end %>
+
 
 
 
