--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="main-content2">
+<div class="container" id="main-content">
   <div class="row">
 
       <div class="offset1 span4 offer-small rounded-borders">
