--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -329,3 +329,10 @@
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="../assets/faqs.js"></script>
 
+<script type="text/javascript">
+    function removeId(){
+        $("#landing").attr("id", "page-faq");
+    }
+    removeId();
+
+</script>
