--- a/app/views/pages/we.html.erb
+++ b/app/views/pages/we.html.erb
@@ -138,4 +138,12 @@
 
 <% end %>
 
+<script type="text/javascript">
+    function removeId(){
+        $("#landing").attr("id", "page-faq");
+    }
+    removeId();
+
+</script>
+
 
