--- a/app/views/pages/form_company.html.erb
+++ b/app/views/pages/form_company.html.erb
@@ -30,13 +30,18 @@
                 <div class="wrapper">
                     <article class="row-fluid">
                         <div class="span8">
+                          <% if !alert.nil?%>
+                              <div class="alert">
+                                <%= alert %>
+                              </div>
+                          <%end%>
                           <% unless flash[:notice].nil? %>
                               <div class="alert">
 
                                 <%= flash[:notice] %>
 
                               </div>
-                          <% end %>
+                          <% end%>
                             <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |form| %>
                             <fieldset>
 
@@ -188,13 +193,19 @@
                 <div class="wrapper">
                     <article class="row-fluid">
                         <div class="span8">
-                          <% unless flash[:notice].nil? %>
+                          <% if !alert.nil?%>
                               <div class="alert">
+                                <%= alert %>
+                              </div>
+                          <%end%>
+                          <% unless flash[:notice].nil? %>
+                        <div class="alert">
 
                                 <%= flash[:notice] %>
 
                               </div>
-                          <% end %>
+                          <% end%>
+
                           <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |form| %>
                             <fieldset>
 
@@ -286,6 +297,13 @@
 
 
 <% end %>
+<script type="text/javascript">
+    function removeId(){
+        $("#landing").attr("id", "page-faq");
+    }
+    removeId();
+
+</script>
 
 
 
