client offers view

--- a/app/views/users/offers_client_user.html.erb
+++ b/app/views/users/offers_client_user.html.erb
@@ -41,13 +41,13 @@
                             <div class="media hotel-item">
                               <a class="pull-left" href="#">
                                 <% unless offer.photo.nil? %>
-                                    <img src="<%= offer.photo%>" class="media-object">
+                                    <img src="<%= offer.photo%>" class="media-object imgSize">
                                 <%end%>
                               </a>
                               <div class="media-body">
-                                <h4 class="media-heading"><a href="#"><%= offer.name %></a></h4>
+                                <h4 class="media-heading"><a href="<%= offer_path(offer) %>"><%= offer.name %></a></h4>
                                 <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
-                                <p><%=  Company.find_by_id(offer.company_id).name %></p>
+                                <p><%=  Company.find_by_id(offer.branch.company_id).name %></p>
                               </div><!--end media-body-->
                             </div><!--end media-->
 
@@ -79,13 +79,13 @@
                             <div class="media hotel-item">
                               <a class="pull-left" href="#">
                                 <% unless offer.photo.nil? %>
-                                    <img src="<%= offer.photo%>" class="media-object">
+                                    <img src="<%= offer.photo%>" class="media-object imgSize">
                                 <%end%>
                               </a>
                               <div class="media-body">
-                                <h4 class="media-heading"><a href="#"><%= offer.name %></a></h4>
+                                <h4 class="media-heading"><a href="<%= offer_path(offer) %>"><%= offer.name %></a></h4>
                                 <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
-                                <p><%=  Company.find_by_id(offer.company_id).name %></p>
+                                <p><%=  Company.find_by_id(offer.branch.company_id).name %></p>
                               </div><!--end media-body-->
                             </div><!--end media-->
 
@@ -115,13 +115,13 @@
                         <div class="media hotel-item">
                           <a class="pull-left" href="#">
                             <% unless offer.photo.nil? %>
-                                <img src="<%= offer.photo%>" class="media-object">
+                                <img src="<%= offer.photo%>" class="media-object imgSize">
                             <%end%>
                           </a>
                           <div class="media-body">
-                            <h4 class="media-heading"><a href="#"><%= offer.name %></a></h4>
+                            <h4 class="media-heading"><a href="<%= offer_path(offer) %>"><%= offer.name %></a></h4>
                             <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
-                            <p><%= Company.find_by_id(offer.company_id).name %></p>
+                            <p><%= Company.find_by_id(offer.branch.company_id).name %></p>
                           </div><!--end media-body-->
                         </div><!--end media-->
 
