--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,14 +10,19 @@
 
         <div class="wrapper">
           <article>
-            <%= form_for(current_user) do |f| %>
+            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+                </fieldset>
+
                 <label for="inputPass">Contraseña Actual: </label>
                 <%= f.password_field :password, :autocomplete => "off", :class => "input-xlarge", :required => true %>
                 <label for="inputNewPass">Nueva Contraseña: </label>
-                <%= f.password_field :password, :class => "input-xlarge", :required => true %>
+                <%= f.password_field :new_password, :class => "input-xlarge", :required => true %>
                 <label for="inputNewPassAgain">Repetir Contraseña: </label>
-                <%= f.password_field :password, :class => "input-xlarge", :required => true %>
+                <%= f.password_field :password_confirmation, :class => "input-xlarge", :required => true %>
                 <hr>
+
+                </fieldset>
+
                 <div class="text-center">
                   <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Cambiar Contraseña</button>
                 </div>
