--- a/app/views/newsletter_mailer/newsletter_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_email.html.erb
@@ -1,4 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+
+<!-- Le styles -->
+<%= stylesheet_link_tag 'bootstrap.css' %>
+<%= stylesheet_link_tag 'formtastic.css' %>
+<%= stylesheet_link_tag 'dealhunter.css' %>
+<%= stylesheet_link_tag 'gmaps4rails' %>
+
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
+<script src="/../assets/bootstrap-dropdown.js"></script>
+<script src="/../assets/bootstrap-tab.js"></script>
+<script src="/../assets/bootstrap-modal.js"></script>
+<script src="/../assets/jquery_nested_form.js"></script>
+<script src="/../assets/validationScript.js"></script>
+<script src="/../assets/gmaps4rails/gmaps4rails.base.js.coffee"></script>
+<script src="/../assets/gmaps4rails/gmaps4rails.bing.js.coffee"></script>
+<script src="/../assets/gmaps4rails/gmaps4rails.googlemaps.js.coffee"></script>
+<script src="/../assets/gmaps4rails/gmaps4rails.mapquest.js.coffee"></script>
+<script src="/../assets/gmaps4rails/gmaps4rails.openlayers.js.coffee"></script>
+<script src="http://localhost:9292/faye.js"></script>
+<script src="/../assets/pushNotifications.js"></script>
+
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
