--- a/app/views/offer_start_mailer/offer_start_email.html.erb
+++ b/app/views/offer_start_mailer/offer_start_email.html.erb
@@ -74,18 +74,14 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="20">
               <tr>
                 <td style="font-size: 14px; line-height:20px; color:#333;">
-                  <p>Hola<%= @user.email %> !</p>
+                  <p>Hola <%= @user.email %> !</p>
 
-                  <p>En <strong style="color:#3253ff;">Dealhunter</strong> tenemos nuevas ofertas para vos, basada en
-                    tus intereses. </p>
+                  <p>Tu oferta <%= @offer.name %> acaba de comenzar. </p>
 
-                  <p>Asique preparate para disfrutar!.</p>
-
-                  <p>Clickeá el botón <strong style="color:#3253ff;">VER OFERTAS</strong> y disfruta las mejores ofertas
-                    seleccionadas para vos!. </p>
+                  <p>Disfrutala!.</p>
 
 
-                  <p>Muchas gracias por su atención<br>
+                  <p>Muchas gracias!<br>
                     <strong>El equipo de DealHunter</strong></p>
                 </td>
               </tr>
