--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -84,7 +84,12 @@
                     <li><span></span></li>
                   </ul>
                   <div class="accord_cont">
-                    <p></p>
+                    <p>Lo primero que tenes que hacer, es seleccionar tus intereses para que el sistema decida que ofertas
+                    son las mas interesantes para vos.</p>
+                    <p>Una vez que realizaste ese proceso, deberas inscribirte a las ofertas que te interesen y aguardar a que
+                      la misma comienze.</p>
+                    <p>Al momento en que la oferta se de por iniciada, recibiras un aviso del sitio, para que puedas ir disfrutar
+                      de la misma en la sucursal indicada.</p>
                   </div>
 
 
