Add different routes for contact form and contact email

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -182,7 +182,7 @@
             <li><a href="/pages/we">Quiénes Somos</a></li>
             <li><a href="/pages/work_with_us">Trabajá con Nosotros</a></li>
             <li><a href="/pages/faqs">Ayuda</a></li>
-            <li><a href="/pages/contact">Contacto</a></li>
+            <li><a href="/pages/form_contact">Contacto</a></li>
           </ul>
         </nav>
         <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
