--- a/app/views/pages/form_company.html.erb
+++ b/app/views/pages/form_company.html.erb
@@ -139,7 +139,7 @@
                       <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
                       <li><a href="<%= pages_form_company_path %>">Queres publicar?</a></li>
                       <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
-                      <li><a href="<%= pages_contact_path %>">Contacto</a></li>
+                      <li><a href="<%= pages_form_contact_path%>">Contacto</a></li>
                     </ul>
                 </nav>
                 <p class="copyright">Copyright © 2013 DealHunter.com. Todos los derechos reservados</p>
