--- a/app/views/pages/terms_and_conds.html.erb
+++ b/app/views/pages/terms_and_conds.html.erb
@@ -415,7 +415,7 @@
                 <li><a href="/pages/work_with_us">Trabajá con Nosotros</a></li>
                 <li><a href="/pages/terms_and_conds">Términos y Condiciones</a></li>
                 <li><a href="/pages/faqs">Ayuda</a></li>
-                <li><a href="/pages/contact">Contacto</a></li>
+                <li><a href="/pages/form_contact">Contacto</a></li>
               </ul>
             </nav>
             <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
