se ven las imagenes de los mailers

--- a/app/views/newsletter_mailer/newsletter_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_email.html.erb
@@ -51,7 +51,7 @@
       <!--header-->
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://dealhunterarg.herokuapp.com/assets/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com"></td>
+          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://cursosflipstudios.com.ar/imgdeal/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com"></td>
         </tr>
         <tr>
           <td valign="middle" align="center" style="background:#c1beb6; color:#fff;" bgcolor="#ff4b3d">
