--- a/app/views/offer_start_mailer/offer_start_email.html.erb
+++ b/app/views/offer_start_mailer/offer_start_email.html.erb
@@ -30,7 +30,7 @@
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff">
-            <img src="http://dealhunterarg.herokuapp.com/assets/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com">
+            <img src="http://cursosflipstudios.com.ar/imgdeal/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com">
           </td>
         </tr>
         <tr>
@@ -88,7 +88,7 @@
             </table>
           </td>
           <td valign="top" width="270">
-            <img src="https://dealhunterarg.herokuapp.com/assets/mailer.png" width="270" height="270" style="margin-top: 50px;">
+            <img src="http://cursosflipstudios.com.ar/imgdeal/mailer.png" width="270" height="270" style="margin-top: 50px;">
           </td>
         </tr>
         <tr>
