--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -29,7 +29,7 @@
       <!--header-->
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://dealhunterarg.herokuapp.com/assets/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com"></td>
+          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://cursosflipstudios.com.ar/imgdeal/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com"></td>
         </tr>
         <tr>
           <td valign="middle" align="center" style="background:#c1beb6; color:#fff;" bgcolor="#ff4b3d">
@@ -79,7 +79,7 @@
               </tr>
             </table>
           </td>
-          <td valign="top" width="270"><img src="https://dealhunterarg.herokuapp.com/assets/mailer.png" width="270" height="270" style="margin-top: 50px;"></td>
+          <td valign="top" width="270"><img src="http://cursosflipstudios.com.ar/imgdeal/mailer.png" width="270" height="270" style="margin-top: 50px;"></td>
         </tr>
         <tr>
           <td colspan="2" valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
