fixing time bug, and countdown

--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -215,12 +215,12 @@
           <div class="media-body">
             <p>
               <b>Fecha de inicio:</b>
-              <%= offer.start_date %>
+              <%= offer.start_date.strftime("%d/%m/%y %H:%M") %>
             </p>
 
             <p>
               <b>Fecha de finalización:</b>
-              <%= offer.end_date %>
+              <%= offer.end_date.strftime("%d/%m/%y %H:%M") %>
             </p>
           </div>
           <!--end media-body-->
